--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
+ErrorDocument 404 /theme/404.php
 
-# BEGIN WordPress
+
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
@@ -7,5 +8,3 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
-
-# END WordPress
